# ComfyUI-MatAnyone

./: README.md  __init__.py  constants.py  mat_anyone.py  pyproject.toml  run.py  utils.py
.github/workflows/: publish_action.yml
src/core/: inference_core.py
src/model/: big_modules.py  matanyone.py  modules.py  object_summarizer.py  tensor_utils.py
workflow/: workflow_mat_anyone.json
